infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  rules:
    - host: cp-chat.xswhb.cn
      http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service: 
                name: auth-srv
                port: 
                  number: 3000
          - path: /api/chat
            pathType: Prefix
            backend:
              service: 
                name: chat-srv
                port: 
                  number: 3000
          - path: /api/community
            pathType: Prefix
            backend:
              service:
                name: community-srv
                port: 
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 80
